# JUCE-Plugin-Template

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/headers/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
